Fix admin menu spacing
admin menu spans all width and centers items since we removed horizontalNav.js from the backend we need a way to replicate the previous behavior display: table; on the parent <ul> and using display: table-cell; on chil <li> ensures we always use the whole width of the parent container and we span the children <li> accordingly using the same width across the given space

Fixes #3839

Conflicts:
	backend/app/views/spree/layouts/admin.html.erb

--- a/backend/app/assets/stylesheets/admin/components/_navigation.scss
+++ b/backend/app/assets/stylesheets/admin/components/_navigation.scss
@@ -63,12 +63,18 @@ nav.menu {
 #admin-menu {
   background-color: $color-3;
 
+  ul{
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+  }
+
   li {
-    min-width: 90px;
+    display: table-cell;
 
     a {
       display: block;
-      padding: 25px 20px;
+      padding: 25px 15px;
       color: $color-1 !important;
       text-transform: uppercase;
       position: relative;
